src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>CORE Sales Process</fullName>
        <description>CORE Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contract %28If Required%29</fullName>
        </values>
        <values>
            <fullName>In Production</fullName>
        </values>
        <values>
            <fullName>Invoiced</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Prequalified</fullName>
        </values>
        <values>
            <fullName>Proposal%2FQuote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Renewal Confirmation</fullName>
        </values>
        <values>
            <fullName>Solutioning</fullName>
        </values>
        <values>
            <fullName>Won %28Verbal Agreement%29</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CTIMGI</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal%2FQuote</fullName>
        </values>
        <values>
            <fullName>Solutioning</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Global Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awarded</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Pipeline%2FPending</fullName>
        </values>
        <values>
            <fullName>Prequalified</fullName>
        </values>
        <values>
            <fullName>Proposal%2FQuote</fullName>
        </values>
        <values>
            <fullName>Solutioning</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New Sales</fullName>
        <description>This process is used for any new business opportunities.</description>
        <isActive>false</isActive>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewal Sales</fullName>
        <description>This process is used for any renewal business opportunities.</description>
        <isActive>false</isActive>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales</fullName>
        <description>New Sales Process is created which will replace existing 2 sales processes.</description>
        <isActive>false</isActive>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>US HE</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>US HE Mobile</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AM_User_Forecast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains the user forecast id for the opportunity owner.</description>
        <inlineHelpText>Contains the user forecast id for the opportunity owner.</inlineHelpText>
        <label>AM User Forecast</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UserForecast__c.User__c</field>
                <operation>equals</operation>
                <valueField>$Source.OwnerId</valueField>
            </filterItems>
            <infoMessage>Opportunity Owner user forecast</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UserForecast__c</referenceTo>
        <relationshipLabel>Opportunities (AM User Forecast)</relationshipLabel>
        <relationshipName>Opportunities_AM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AM_YTD_Sales__c</fullName>
        <description>Contains the YTD sales of the opportunity owner.</description>
        <formula>AM_User_Forecast__r.YTDSales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contains the YTD sales of the opportunity owner.</inlineHelpText>
        <label>AM YTD Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AM_YTD_Target__c</fullName>
        <description>Contains the YTD target of the opportunity owner.</description>
        <formula>AM_User_Forecast__r.YTDTarget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contains the YTD target of the opportunity owner.</inlineHelpText>
        <label>AM YTD Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Academic_End_Date__c</fullName>
        <description>Automatically populated based on the associated qualification&apos;s duration</description>
        <label>Academic End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Academic_Start_Date__c</fullName>
        <description>Manually entered to denote the student&apos;s intake year and start date</description>
        <label>Academic Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Academic_Vetting_Date__c</fullName>
        <description>Custom Date field on Opportunity Object &apos;Academic Vetting Date&apos; which captures the date a Students Academic Vetting has been completed</description>
        <formula>IF(  ISPICKVAL(Academic_Vetting_Status__c , &apos;Vetted - Rejected&apos;) ||
     ISPICKVAL(Academic_Vetting_Status__c , &apos;Vetted - Approved&apos;) ,   TODAY()  , NULL)</formula>
        <label>Academic Vetting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Academic_Vetting_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field identifies whether the associated Opportunity&apos;s Academic Vetting has been escalated or not.</description>
        <label>Academic Vetting Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Academic_Vetting_Escalation_Status__c</fullName>
        <description>Field to show the status of the academic vetting escalation process for an opportunity as it moves from review to successful or unsuccessful status.</description>
        <label>Academic Vetting Escalation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Academic_Vetting_Status__c</fullName>
        <description>This field shows the status of the academic vetting for an opportunity.</description>
        <label>Academic Vetting Status</label>
        <picklist>
            <picklistValues>
                <fullName>Un-Vetted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Vetted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vetted - Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vetted - Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccessOptyID__c</fullName>
        <description>Access Import ID for Opportunity</description>
        <externalId>true</externalId>
        <inlineHelpText>Access Import ID for Opportunity</inlineHelpText>
        <label>AccessOptyID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Activities__c</fullName>
        <description>Specifies the activities to be undertaken at each of the opportunity stages</description>
        <formula>CASE(StageName, &quot;Identification&quot;, &quot;Initiating Calls to Professors; Visiting campuses during Professors&apos; office hours; identifying prospects based on Competitor product in Use; Fill out form generated from Aprimo email campaign: Academic Consulting Form&quot;, &quot;Qualification&quot;, &quot;Communication with decision makers related to the Opportunity; typically a face-to-face meeting; Account Manager conducts a need gathering/needs analysis; Secure buyin from decision makers; Create some next steps; follow-up meeting; follow-up email to Decision Makers&quot;, &quot;Scoping&quot;,&quot;Detailed needs analysis by a Learning Solutions Manager; Confirming and elaborating needs analysis previously logged by Account Manager&quot;,&quot;Solutioning&quot;,&quot;identify one or more potential solutions which meets the customer&apos;s requirements&quot;,&quot;Internal Approval&quot;,&quot;Internal review conducted of Solution with Managers approval and Finance team review; Deal Review board reviews Solution presented in previous stage&quot;,&quot;Proposal&quot;,&quot;Learning Solutions Manager sends approved proposal to customer; Once received, Communicating approved Deal to the Customer&quot;,&quot;Negotiation&quot;,&quot;Discussion regarding pricing Learning Solutions Manager and Customer; Process for implementation and Level of Service received; Solution tweeked after discussion&quot;,&quot;Closed Won&quot;,&quot;Convert Products on this Opportunity to Assets. Learning Solutions Manager has received either written or verbal communication from the customer agreeing to the deal; Commencing the Production process of the Solution; Handover from the Solutions manager to the Production team.&quot;,&quot;Agreement Received&quot;,&quot;Received Signed Agreement from Adopter&quot;,&quot;Review&quot;,&quot;Received Feeback from Customer based on existing Product In Use&quot;,&quot;Rollover Confirmed&quot;,&quot;Confirmation Received&quot;,&quot;Order Received&quot;,&quot;Received Order from Purchaser&quot;,&quot;Invoicing Purchaser&quot;,&quot;Send Invoice to the Purchaser&quot;,&quot;Review&quot;,&quot;Consultation with Customers to see if existing Solution meets need; Confirming and elaborating based on Feedback in Review&quot;,&quot;Rollover Confirmed&quot;,&quot;Communicating with Customer that Rollover is confirmed&quot;,&quot;Unknown&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Specifies the activities to be undertaken at each of the opportunity stages</inlineHelpText>
        <label>Activities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adoption_Criteria__c</fullName>
        <description>The following field allows the user to identify via a free form text field what the current adoption criteria to be considered is for the associated Opportunity</description>
        <label>Adoption Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adoption_Type__c</fullName>
        <description>This field populates the Opportunity Adoption Type field with the adoption type found from the University Course</description>
        <label>Adoption Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Drift_Alert__c</fullName>
        <formula>IF( ABS(Estimated_Net_Value__c -  Amount) &gt;= 10000, &apos;YES&apos;, &apos;NO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Drift Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>At_Risk_Postponed_Reason__c</fullName>
        <description>This field is leveraged to capture a reason for an Opportunity being in &quot;At Risk&quot; or &quot;Postponed&quot; status - (CORE).</description>
        <inlineHelpText>If the opportunity status is &apos;At Risk&apos; or &apos;Postponed&apos;, the reason must be recorded in this field.</inlineHelpText>
        <label>At Risk/Postponed Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to denote whether the opportunity has sufficient budget to engage in sale</description>
        <label>Available Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <description>Updated by  Code</description>
        <label>Campus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_to_Deliver_Flag__c</fullName>
        <description>This field houses a flag that represents the opportunities efficacy rating.</description>
        <formula>IMAGE( 
CASE(   Capacity_to_deliver__c , 
&quot;Green&quot;, &quot;/resource/efficacy_green&quot;,
&quot;Amber/Green&quot;, &quot;/resource/efficacy_ambergreen&quot;,
&quot;Amber/Red&quot;, &quot;/resource/efficacy_amberred&quot;,
&quot;Red&quot;, &quot;/resource/efficacy_red&quot;, 
&quot;/resource/efficacy_all&quot;), 
&quot;Capacity Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity to Deliver Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_to_deliver__c</fullName>
        <description>This field is used to denote an Opportunity&apos;s efficacy, given some feedback from the Opportunity contacts on results the efficacy field is updated.</description>
        <label>Capacity to Deliver</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber/Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber/Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Channel of business (i.e. Direct Bill, Bookstore, etc.)</description>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Bill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clone_Oppty__c</fullName>
        <description>Hidden field, the ID to which the opportunity was cloned if this was a renewal</description>
        <label>Clone_Oppty</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <description>Reason why the opportunity was won or lost.</description>
        <inlineHelpText>Reason why the opportunity was won or lost.</inlineHelpText>
        <label>Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Product Limitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Features</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Information_del_del__c</fullName>
        <description>Field to provide details of competitor companies or products</description>
        <label>Competitor Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Product_Count__c</fullName>
        <label>Competitor Product Count</label>
        <summaryForeignKey>Competitor_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Conferer__c</fullName>
        <description>Used to capture the Conferer on the Proposal</description>
        <label>Conferer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CourseId__c</fullName>
        <description>This field is used to create course to opportunity mapping for Territory Analysis. Will not be added in any layout and should not be used for other functionality</description>
        <label>CourseId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courses_Applied_for_Other_Institutions__c</fullName>
        <description>Field to capture the courses that the Student on the opportunity has applied for at other non-Pearson institutions.</description>
        <label>Courses Applied for @ Other Institutions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Lead_Received__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date when the lead/opportunity is first noted.</description>
        <inlineHelpText>Date when the lead/opportunity is first noted.</inlineHelpText>
        <label>Date Lead Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Digital_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populates based when digital products are added to opportunity</description>
        <label>Technology Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Earlybird_Payment_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field shows the payment reference number of the Early Bird (NB) or Securing Fee (rollover) discount applied to opportunity/course fees if a student registers for their course early.</description>
        <label>Earlybird/Securing Payment Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrolment_Contract__c</fullName>
        <description>URL to external link to access the student&apos;s signed Enrolment Contract for CTI/MGI</description>
        <label>Enrolment Contract</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Enrolment_Status__c</fullName>
        <description>This field shows the status of a student&apos;s enrollment for the qualification that the opportunity represents.</description>
        <label>Enrolment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Net_Value__c</fullName>
        <description>Estimated value of the opportunity.</description>
        <inlineHelpText>Estimated value of the opportunity.</inlineHelpText>
        <label>Estimated Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Evidence_Flag__c</fullName>
        <formula>IMAGE( 
CASE(  Evidence__c, 
&quot;Green&quot;, &quot;/resource/1394066910000/efficacy_green&quot;,
&quot;Amber/Green&quot;, &quot;/resource/1394067069000/efficacy_ambergreen&quot;,
&quot;Amber/Red&quot;, &quot;/resource/1394067036000/efficacy_amberred&quot;,
&quot;Red&quot;, &quot;/resource/1394067003000/efficacy_red&quot;, 
&quot;/resource/1394067094000/efficacy_all&quot;), 
&quot;Evidence Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evidence Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evidence__c</fullName>
        <description>Opportunity efficacy field</description>
        <label>Evidence</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber/Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber/Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This field captures the Application ID from eVision that may be related to this opportunity.</description>
        <label>Related Opportunity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Opportunity_Number__c</fullName>
        <description>The following field houses the opportunity number that is associated to this record as it is recorded in an external system</description>
        <externalId>true</externalId>
        <label>External Opportunity Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fall__c</fullName>
        <description>This field identifies how many enrollments are related to the University Course this Opportunity originated from.</description>
        <label>Fall</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>The following field identifies the Opportunity owner&apos;s geography per their user record</description>
        <formula>TEXT(Owner.Geography__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hand_Over_Date__c</fullName>
        <description>Date the Account Manager hands over the Opportunity to the Solutions Manager.
Date theSolutions Manager hands over the Opportunity to the Production &amp; Operations Manager.</description>
        <inlineHelpText>Date the Account Manager hands over the Opportunity to the Solutions Manager.
Date theSolutions Manager hands over the Opportunity to the Production &amp; Operations Manager.</inlineHelpText>
        <label>Hand Over Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_Student_heard_about_us__c</fullName>
        <description>The field identifies the source or activity that allowed the Student to first hear about Pearson and its offerings.</description>
        <label>How Student heard about us?</label>
        <picklist>
            <picklistValues>
                <fullName>School Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper/ Magazine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Institution_Approved__c</fullName>
        <description>The following field identifies the name of the institution which was approved</description>
        <label>Institution Approved</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Sponsor__c</fullName>
        <description>This field identifies whether the student is receiving international sponsorship</description>
        <label>International Sponsor?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>International_Student_Status__c</fullName>
        <description>This field requires the higher education consultant to identify whether the associated student is an international student or not</description>
        <inlineHelpText>Confirm if the related student will be applying as an international student or not</inlineHelpText>
        <label>International Student?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>International_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to identify if the student is an international or Local Student.</description>
        <label>International Student?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoicing_Month__c</fullName>
        <description>Month the opportunity will be invoiced.</description>
        <inlineHelpText>Month the opportunity will be invoiced.</inlineHelpText>
        <label>Invoicing Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CORE - Hidden field, used to drive flag</description>
        <label>Is Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LSM_Next_Action_Note__c</fullName>
        <description>Note for the Learning Solution Manager from the Account Manager.</description>
        <inlineHelpText>Note for the Learning Solution Manager from the Account Manager.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LSM_YTD_Sales__c</fullName>
        <description>Learning Solution Manager YTD Sales.</description>
        <formula>User_Forecast__r.YTDSales__c</formula>
        <inlineHelpText>Learning Solution Manager YTD Sales.</inlineHelpText>
        <label>LSM YTD Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LSM_YTD_Target__c</fullName>
        <description>Learning Solution Manager YTD target.</description>
        <formula>User_Forecast__r.YTDTarget__c</formula>
        <inlineHelpText>Learning Solution Manager YTD target.</inlineHelpText>
        <label>LSM YTD Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Trigger_Event__c</fullName>
        <description>Used to indicate the latest trigger event fired</description>
        <label>Latest Trigger Event</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Amount__c</fullName>
        <description>Maps from lead &apos;amount&apos; on conversion</description>
        <label>Lead Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Creation_Date__c</fullName>
        <description>This field identifies the data when the lead that this opportunity was converted from was created in SFDC.</description>
        <label>Lead Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Discipline__c</fullName>
        <description>Core - this field is mapped from the lead &quot;Discipline&quot; field</description>
        <label>Discipline of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Allied Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anatomy &amp; Physiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anthropology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biology &amp; Microbiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Sciences &amp; Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary, Hospitality, Travel &amp; Tourism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deaf Studies &amp; Deaf Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS &amp; Fire Science (Brady)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &amp; Interior Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geology &amp; Oceanography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Kinesiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interdisciplinary Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Studies &amp; Paralegal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mathematics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>